starts levels and images

--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-body {
-  background-image: url("./images/lets_go_on_an_adventure.png");
-  background-size: cover;
-}
-
-/* class for hiding items on the page as needed */
-
-.hidden {
-  display: none;
+h1{
+  background-color: pink;
 }
