--- a/views/levels/cave/caveLose.html
+++ b/views/levels/cave/caveLose.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="../../../style.css">
-  </head>
-  <body>
+
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <meta charset="utf-8">
+        <title></title>
+        <link rel="stylesheet" href="../../../style.css">
+      </head>
+      <body>
+            <img id="caveLose" src="https://i.imgur.com/kETfax3.png" alt="cave">
+              <h1>Oh no! That soda made you jittery and your sugar spike up and down. Fructar defeats you and infects all of the village kids.<br> Game over</h1>
+
 
   </body>
   <script src="../../../main.js"></script>
