--- a/views/levels/forest/forestGood.html
+++ b/views/levels/forest/forestGood.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="forestWin" src="https://i.imgur.com/hgWKyhU.png" alt="forest">
+
+                  <h1>Excellent choice! Oatmeal is high in nutritious fiber, to help keep you full. You run through the forest in no time!</h1>
+
 
   </body>
   <script src="../../../main.js"></script>
