--- a/views/levels/forest/forestStart.html
+++ b/views/levels/forest/forestStart.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="forest" src="https://i.imgur.com/EUFcwxh.png" alt="forest">
+          <img id="oats" src="https://i.imgur.com/MkV65v3.png" alt="oats">
+                <img id="donut" src="https://i.imgur.com/sQrBF9N.png" alt="donut">
+                  <h1>Good morning, young Hero. Fructar has been spotted just beyond the forest!</h1>
+                    <h3> Before you go, fuel up with some breakfast.</h3>
 
   </body>
   <script src="../../../main.js"></script>
