--- a/views/levels/cave/caveWin.html
+++ b/views/levels/cave/caveWin.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="../../../style.css">
-  </head>
-  <body>
-    
+
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <meta charset="utf-8">
+        <title></title>
+        <link rel="stylesheet" href="../../../style.css">
+      </head>
+      <body>
+            <img id="caveWin" src="https://i.imgur.com/55d8opi.png" alt="cave">
+              <h1>Great! Water is the perfect choice to keep you hydrated during exercise and battle. You defeat Fructar and save the village kids!.<br> HOORAY!!</h1>
+
+
   </body>
   <script src="../../../main.js"></script>
 </html>
