--- a/views/levels/mountain/mounGood.html
+++ b/views/levels/mountain/mounGood.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="mounWin" src="https://i.imgur.com/FPREN7s.png" alt="moun">
+
+                  <h1>turkey sandwich on whole wheat bread! Good job.
+The protein and healthy fats will keep you full, while the complex carbs in the bread will give you energy up for your hike</h1>
+
 
   </body>
   <script src="../../../main.js"></script>
