--- a/views/levels/mountain/mountainStart.html
+++ b/views/levels/mountain/mountainStart.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="mountain" src="https://i.imgur.com/CIkvIpP.png" alt="moun">
+          <img id="sandwich" src="https://i.imgur.com/pYaNYvR.png" alt="sandwich">
+                <img id="pizza" src="https://i.imgur.com/HnZPjpd.png" alt="pizza">
+                  <h1>You made it across the forest, but not quickly enough. Fructar managed to escape over the mountain.</h1>
+                    <h3>  You must be hungry, have some lunch first.</h3>
 
   </body>
   <script src="../../../main.js"></script>
