--- a/views/levels/mountain/mounBad.html
+++ b/views/levels/mountain/mounBad.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="mounLose" src="https://i.imgur.com/zBSIJ5v.png" alt="moun">
+
+              <h1>Unfortunately, processed meat and cheese from that pizza and soda is leaving you tired and bloated. You're wasting time by hiking slowly</h1>
+
 
   </body>
   <script src="../../../main.js"></script>
