--- a/views/levels/stream/streamBad.html
+++ b/views/levels/stream/streamBad.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="streamLose" src="https://i.imgur.com/LdkoL3F.png" alt="stream">
+
+            <h1>Fries make you feel heavy and nauseous. You fall into the stream and are wet and tired before battle</h1>
+
 
   </body>
   <script src="../../../main.js"></script>
