--- a/views/levels/stream/streamGood.html
+++ b/views/levels/stream/streamGood.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="streamWin" src="https://i.imgur.com/7AqxqXs.png" alt="stream">
+
+            <h1>That's a great option. Chicken and veggies are full of protein and vitamins to help you jump over the stream and prepare to fight</h1>
+
 
   </body>
   <script src="../../../main.js"></script>
