--- a/views/levels/stream/streamStart.html
+++ b/views/levels/stream/streamStart.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
+        <img id="stream" src="https://i.imgur.com/WYWPU1W.png" alt="stream">
+          <img id="fries" src="https://i.imgur.com/9vGHOwH.png" alt="fries">
+                <img id="veg" src="https://i.imgur.com/P4igJ6W.png" alt="veg">
+                  <h1>Fructar heard you were coming and he hid in that cave across the stream. Looks dangerous.</h1>
+                    <h3> Power up before you make your way over there</h3>
 
   </body>
   <script src="../../../main.js"></script>
