--- a/views/about.html
+++ b/views/about.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <header>
+      <ul>
+        <li class="headerItems"><a class="headerLinks" href="../index.html">Home</a></li>
+        <li class="headerItems">Rules</li>
+        <li class="headerItems"><a class="headerLinks" href="about.html">About Health Quest</a></li>
+        <li class="headerItems">Login</li>
+      </ul>
+    </header>
 
   </body>
   <script src="../main.js"></script>
