--- a/style.css
+++ b/style.css
@@ -31,3 +31,35 @@ h3{
 #kidCave {
   margin-left: 3%;
 }
+
+header {
+  background-color: #767999;
+  text-align: right;
+}
+
+#letsPlayScreen {
+  height: 600px;
+  width: 1000px;
+  background-image: url('images/lets_go_on_an_adventure_1024.png');
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  display: flex;
+}
+
+#beginGameButton {
+  font-size: 48px;
+  text-decoration: none;
+  position: absolute;
+  color: black;
+  margin-top: 350px;
+  margin-left: 650px;
+}
+.headerItems {
+  display: inline-block;
+  padding: 36px;
+  font-size: 24px;
+}
+.headerLinks {
+  text-decoration: none;
+  color: black;
+}
