add links between pages

--- a/views/levels/mountain/mounBad.html
+++ b/views/levels/mountain/mounBad.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="mounLose" src="https://i.imgur.com/zBSIJ5v.png" alt="moun">
 
               <h1>Unfortunately, processed meat and cheese from that pizza and soda is leaving you tired and bloated. You're wasting time by hiking slowly</h1>
+
+              <button class="continueButton"><a href="../stream/streamStart.html">Continue</a></button>
 
 
   </body>
