--- a/views/levels/stream/streamStart.html
+++ b/views/levels/stream/streamStart.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="stream" src="https://i.imgur.com/WYWPU1W.png" alt="stream">
-          <img id="fries" src="https://i.imgur.com/9vGHOwH.png" alt="fries">
-                <img id="veg" src="https://i.imgur.com/P4igJ6W.png" alt="veg">
+          <a href="streamBad.html"><img id="fries" src="https://i.imgur.com/9vGHOwH.png" alt="fries"></a>
+                <a href="streamGood.html"><img id="veg" src="https://i.imgur.com/P4igJ6W.png" alt="veg"></a>
                   <h1>Fructar heard you were coming and he hid in that cave across the stream. Looks dangerous.</h1>
                     <h3> Power up before you make your way over there</h3>
 
