--- a/views/levels/cave/caveLose.html
+++ b/views/levels/cave/caveLose.html
@@ -4,11 +4,15 @@
       <head>
         <meta charset="utf-8">
         <title></title>
+        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
         <link rel="stylesheet" href="../../../style.css">
       </head>
       <body>
             <img id="caveLose" src="https://i.imgur.com/kETfax3.png" alt="cave">
               <h1>Oh no! That soda made you jittery and your sugar spike up and down. Fructar defeats you and infects all of the village kids.<br> Game over</h1>
+
+              <button class="continueButton"><a href="../forest/forestStart.html">Try Again?</a></button>
 
 
   </body>
