--- a/views/levels/cave/caveStart.html
+++ b/views/levels/cave/caveStart.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
     <img id="kidCave" src="https://i.imgur.com/NBXme2T.png" alt="kid">
         <img id="cave" src="https://i.imgur.com/aZX1oMC.png" alt="cave">
-          <img id="coke" src="https://i.imgur.com/Cb40EMX.png" alt="coke">
-                <img id="water" src="https://i.imgur.com/GfkpYag.png" alt="water">
+          <a href="caveLose.html"><img id="coke" src="https://i.imgur.com/Cb40EMX.png" alt="coke"></a>
+                <a href="caveWin.html"><img id="water" src="https://i.imgur.com/GfkpYag.png" alt="water"></a>
                   <h1>Watch out! Fructar is in your sights! Drink up so you stay hydrated!</h1>
                     <h3>Choose your beverage wisely</h3>
 
