--- a/views/levels/cave/caveWin.html
+++ b/views/levels/cave/caveWin.html
@@ -4,11 +4,15 @@
       <head>
         <meta charset="utf-8">
         <title></title>
+        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
         <link rel="stylesheet" href="../../../style.css">
       </head>
       <body>
             <img id="caveWin" src="https://i.imgur.com/55d8opi.png" alt="cave">
               <h1>Great! Water is the perfect choice to keep you hydrated during exercise and battle. You defeat Fructar and save the village kids!.<br> HOORAY!!</h1>
+
+              <button class="continueButton"><a href="../forest/forestStart.html">Play Again?</a></button>
 
 
   </body>
