--- a/views/levels/forest/forestBad.html
+++ b/views/levels/forest/forestBad.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="forestLose" src="https://i.imgur.com/6F7oBAf.png" alt="forest">
 
                   <h1>Oh no, that donut made your sugar spike for a few minutes but left you feeling sluggish.  Walking through the forest will take you all day.</h1>
+
+                  <button class="continueButton"><a href="../mountain/mountainStart.html">Continue</a></button>
 
 
   </body>
