--- a/views/levels/forest/forestGood.html
+++ b/views/levels/forest/forestGood.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="forestWin" src="https://i.imgur.com/hgWKyhU.png" alt="forest">
 
                   <h1>Excellent choice! Oatmeal is high in nutritious fiber, to help keep you full. You run through the forest in no time!</h1>
+
+                  <button class="continueButton"><a href="../mountain/mountainStart.html">Continue</a></button>
 
 
   </body>
