--- a/views/levels/forest/forestStart.html
+++ b/views/levels/forest/forestStart.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="forest" src="https://i.imgur.com/EUFcwxh.png" alt="forest">
-          <img id="oats" src="https://i.imgur.com/MkV65v3.png" alt="oats">
-                <img id="donut" src="https://i.imgur.com/sQrBF9N.png" alt="donut">
+          <a href="forestGood.html"><img id="oats" src="https://i.imgur.com/MkV65v3.png" alt="oats"></a>
+                <a href="forestBad.html"><img id="donut" src="https://i.imgur.com/sQrBF9N.png" alt="donut"></a>
                   <h1>Good morning, young Hero. Fructar has been spotted just beyond the forest!</h1>
                     <h3> Before you go, fuel up with some breakfast.</h3>
 
