--- a/views/levels/mountain/mounGood.html
+++ b/views/levels/mountain/mounGood.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
@@ -10,6 +12,8 @@
 
                   <h1>turkey sandwich on whole wheat bread! Good job.
 The protein and healthy fats will keep you full, while the complex carbs in the bread will give you energy up for your hike</h1>
+
+                 <button class="continueButton"><a href="../stream/streamStart.html">Continue</a></button>
 
 
   </body>
