--- a/views/levels/mountain/mountainStart.html
+++ b/views/levels/mountain/mountainStart.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="mountain" src="https://i.imgur.com/CIkvIpP.png" alt="moun">
-          <img id="sandwich" src="https://i.imgur.com/pYaNYvR.png" alt="sandwich">
-                <img id="pizza" src="https://i.imgur.com/HnZPjpd.png" alt="pizza">
+          <a href="mounGood.html"><img id="sandwich" src="https://i.imgur.com/pYaNYvR.png" alt="sandwich"></a>
+                <a href="mounBad.html"><img id="pizza" src="https://i.imgur.com/HnZPjpd.png" alt="pizza"></a>
                   <h1>You made it across the forest, but not quickly enough. Fructar managed to escape over the mountain.</h1>
                     <h3>  You must be hungry, have some lunch first.</h3>
 
