--- a/views/levels/stream/streamBad.html
+++ b/views/levels/stream/streamBad.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="streamLose" src="https://i.imgur.com/LdkoL3F.png" alt="stream">
 
             <h1>Fries make you feel heavy and nauseous. You fall into the stream and are wet and tired before battle</h1>
+
+            <button class="continueButton"><a href="../cave/caveStart.html">Continue</a></button>
 
 
   </body>
