--- a/views/levels/stream/streamGood.html
+++ b/views/levels/stream/streamGood.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
         <img id="streamWin" src="https://i.imgur.com/7AqxqXs.png" alt="stream">
 
             <h1>That's a great option. Chicken and veggies are full of protein and vitamins to help you jump over the stream and prepare to fight</h1>
+
+            <button class="continueButton"><a href="../cave/caveStart.html">Continue</a></button>
 
 
   </body>
