--- a/views/levels/cave/caveLose.html
+++ b/views/levels/cave/caveLose.html
@@ -3,8 +3,8 @@
     <html>
       <head>
         <meta charset="utf-8">
-        <title></title>
-        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+        <title>Health Quest - Cave</title>
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
         <link rel="stylesheet" href="../../../style.css">
       </head>
@@ -12,7 +12,8 @@
             <img id="caveLose" src="https://i.imgur.com/kETfax3.png" alt="cave">
               <h1>Oh no! That soda made you jittery and your sugar spike up and down. Fructar defeats you and infects all of the village kids.<br> Game over</h1>
 
-              <button class="continueButton"><a href="../forest/forestStart.html">Try Again?</a></button>
+              <button class="playAgain"><a href="../forest/forestStart.html">Try Again?</a></button>
+              <button class="goHome"><a href="../../../index.html">Go Home</a></button>
 
 
   </body>
