--- a/views/about.html
+++ b/views/about.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About Health Quest</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <header>
+      <a id="mainLogo" href="index.html">Health Quest</a>
       <ul>
         <li class="headerItems"><a class="headerLinks" href="../index.html">Home</a></li>
         <li class="headerItems">Rules</li>
@@ -14,7 +17,10 @@
         <li class="headerItems">Login</li>
       </ul>
     </header>
-
+    <div id="aboutHealthQuest">
+      <h1>About Health Quest</h1>
+      <p>Defeat the evil Fructar by keeping your energy up and staying strong. As you go on your adventure, make the proper food choices as everything you eat has an effect on your body.</p>
+    </div>
   </body>
   <script src="../main.js"></script>
 </html>
