--- a/views/levels/cave/caveWin.html
+++ b/views/levels/cave/caveWin.html
@@ -3,8 +3,8 @@
     <html>
       <head>
         <meta charset="utf-8">
-        <title></title>
-        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+        <title>Health Quest - Cave</title>
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
         <link rel="stylesheet" href="../../../style.css">
       </head>
@@ -12,7 +12,8 @@
             <img id="caveWin" src="https://i.imgur.com/55d8opi.png" alt="cave">
               <h1>Great! Water is the perfect choice to keep you hydrated during exercise and battle. You defeat Fructar and save the village kids!.<br> HOORAY!!</h1>
 
-              <button class="continueButton"><a href="../forest/forestStart.html">Play Again?</a></button>
+              <button class="playAgain"><a href="../forest/forestStart.html">Play Again?</a></button>
+              <button class="goHome"><a href="../../../index.html">Go Home</a></button>
 
 
   </body>
