style main logo

--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a id="mainLogo" href="index.html">Health Quest</a>
+      <a id="mainLogo" href="../index.html">Health Quest</a>
       <ul>
         <li class="headerItems"><a class="headerLinks" href="../index.html">Home</a></li>
         <li class="headerItems">Rules</li>
