--- a/style.css
+++ b/style.css
@@ -58,9 +58,18 @@ header {
   font-family: 'Noto Sans', sans-serif;
 
 }
+
+#mainLogo {
+  position: absolute;
+  left: 50px;
+  top: 36px;
+  font-size: 48px;
+  text-decoration: none;
+  color: black;
+}
 .headerItems {
   display: inline-block;
-  padding: 36px;
+  padding: 36px 24px 36px 18px;
   font-size: 24px;
   font-family: 'Noto Sans', sans-serif;
 }
