--- a/views/levels/cave/caveWin.html
+++ b/views/levels/cave/caveWin.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../../../style.css">
       </head>
       <body>
-            <img id="caveWin" src="https://i.imgur.com/55d8opi.png" alt="cave">
+            <img class="animated tada" id="caveWin" src="https://i.imgur.com/55d8opi.png" alt="cave">
               <h1>Great! Water is the perfect choice to keep you hydrated during exercise and battle. You defeat Fructar and save the village kids!.<br> HOORAY!!</h1>
 
               <button class="playAgain"><a href="../forest/forestStart.html">Play Again?</a></button>
