--- a/views/levels/cave/caveStart.html
+++ b/views/levels/cave/caveStart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-    <img id="kidCave" src="https://i.imgur.com/NBXme2T.png" alt="kid">
+    <img class="animated bounceInRight" id="kidCave" src="https://i.imgur.com/NBXme2T.png" alt="kid">
         <img id="cave" src="https://i.imgur.com/aZX1oMC.png" alt="cave">
           <a href="caveLose.html"><img id="coke" src="https://i.imgur.com/Cb40EMX.png" alt="coke"></a>
                 <a href="caveWin.html"><img id="water" src="https://i.imgur.com/GfkpYag.png" alt="water"></a>
