--- a/views/levels/forest/forestBad.html
+++ b/views/levels/forest/forestBad.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-        <img id="forestLose" src="https://i.imgur.com/6F7oBAf.png" alt="forest">
+        <img class="animated shake" id="forestLose" src="https://i.imgur.com/6F7oBAf.png" alt="forest">
 
                   <h1>Oh no, that donut made your sugar spike for a few minutes but left you feeling sluggish.  Walking through the forest will take you all day.</h1>
 
