--- a/views/levels/forest/forestGood.html
+++ b/views/levels/forest/forestGood.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-        <img id="forestWin" src="https://i.imgur.com/hgWKyhU.png" alt="forest">
+        <img class="animated swing" id="forestWin" src="https://i.imgur.com/hgWKyhU.png" alt="forest">
 
                   <h1>Excellent choice! Oatmeal is high in nutritious fiber, to help keep you full. You run through the forest in no time!</h1>
 
