--- a/views/levels/forest/forestStart.html
+++ b/views/levels/forest/forestStart.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <meta charset="utf-8">
     <title>Health Quest - Forest</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-        <img id="forest" src="https://i.imgur.com/EUFcwxh.png" alt="forest">
+        <img class="animated flip" id="forest" src="https://i.imgur.com/EUFcwxh.png" alt="forest">
           <a href="forestGood.html"><img id="oats" src="https://i.imgur.com/MkV65v3.png" alt="oats"></a>
                 <a href="forestBad.html"><img id="donut" src="https://i.imgur.com/sQrBF9N.png" alt="donut"></a>
                   <h1>Good morning, young Hero. Fructar has been spotted just beyond the forest!</h1>
