--- a/views/levels/mountain/mounBad.html
+++ b/views/levels/mountain/mounBad.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-        <img id="mounLose" src="https://i.imgur.com/zBSIJ5v.png" alt="moun">
+        <img class="animated flipInX" id="mounLose" src="https://i.imgur.com/zBSIJ5v.png" alt="moun">
 
               <h1>Unfortunately, processed meat and cheese from that pizza and soda is leaving you tired and bloated. You're wasting time by hiking slowly</h1>
 
