--- a/views/levels/mountain/mountainStart.html
+++ b/views/levels/mountain/mountainStart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-        <img id="mountain" src="https://i.imgur.com/CIkvIpP.png" alt="moun">
+        <img class="animated lightSpeedIn" id="mountain" src="https://i.imgur.com/CIkvIpP.png" alt="moun">
           <a href="mounGood.html"><img id="sandwich" src="https://i.imgur.com/pYaNYvR.png" alt="sandwich"></a>
                 <a href="mounBad.html"><img id="pizza" src="https://i.imgur.com/HnZPjpd.png" alt="pizza"></a>
                   <h1>You made it across the forest, but not quickly enough. Fructar managed to escape over the mountain.</h1>
