--- a/views/levels/stream/streamStart.html
+++ b/views/levels/stream/streamStart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../style.css">
   </head>
   <body>
-        <img id="stream" src="https://i.imgur.com/WYWPU1W.png" alt="stream">
+        <img class="animated zoomInRight" id="stream" src="https://i.imgur.com/WYWPU1W.png" alt="stream">
           <a href="streamBad.html"><img id="fries" src="https://i.imgur.com/9vGHOwH.png" alt="fries"></a>
                 <a href="streamGood.html"><img id="veg" src="https://i.imgur.com/P4igJ6W.png" alt="veg"></a>
                   <h1>Fructar heard you were coming and he hid in that cave across the stream. Looks dangerous.</h1>
