--- a/style.css
+++ b/style.css
@@ -107,6 +107,12 @@ header {
   font-family: 'Noto Sans', sans-serif;
 
 }
+
+.buttonLink {
+  text-decoration: none;
+  color: black;
+}
+
 a:hover {
   text-shadow: 5px 0px 20px yellow;
 
