--- a/views/levels/cave/caveWin.html
+++ b/views/levels/cave/caveWin.html
@@ -10,10 +10,10 @@
       </head>
       <body>
             <img class="animated tada" id="caveWin" src="https://i.imgur.com/55d8opi.png" alt="cave">
-              <h1>Great! Water is the perfect choice to keep you hydrated during exercise and battle. You defeat Fructar and save the village kids!.<br> HOORAY!!</h1>
+              <h1>Great! Water is the perfect choice to keep you hydrated during exercise and battle. You defeat Fructar and save the village kids!<br> HOORAY!!</h1>
 
-              <button class="playAgain"><a href="../forest/forestStart.html">Play Again?</a></button>
-              <button class="goHome"><a href="../../../index.html">Go Home</a></button>
+              <button class="playAgain"><a class="buttonLink" href="../forest/forestStart.html">Play Again?</a></button>
+              <button class="goHome"><a class="buttonLink" href="../../../index.html">Go Home</a></button>
 
 
   </body>
