--- a/views/levels/forest/forestGood.html
+++ b/views/levels/forest/forestGood.html
@@ -12,7 +12,7 @@
 
                   <h1>Excellent choice! Oatmeal is high in nutritious fiber, to help keep you full. You run through the forest in no time!</h1>
 
-                  <button class="continueButton"><a href="../mountain/mountainStart.html">Continue</a></button>
+                  <button class="continueButton"><a class="buttonLink" href="../mountain/mountainStart.html">Continue</a></button>
 
 
   </body>
