--- a/views/levels/mountain/mounBad.html
+++ b/views/levels/mountain/mounBad.html
@@ -10,9 +10,9 @@
   <body>
         <img class="animated flipInX" id="mounLose" src="https://i.imgur.com/zBSIJ5v.png" alt="moun">
 
-              <h1>Unfortunately, processed meat and cheese from that pizza and soda is leaving you tired and bloated. You're wasting time by hiking slowly</h1>
+              <h1>Unfortunately, processed meat and cheese from that pizza is leaving you tired and bloated. You're wasting time by hiking slowly.</h1>
 
-              <button class="continueButton"><a href="../stream/streamStart.html">Continue</a></button>
+              <button class="continueButton"><a class="buttonLink" href="../stream/streamStart.html">Continue</a></button>
 
 
   </body>
