--- a/views/levels/stream/streamBad.html
+++ b/views/levels/stream/streamBad.html
@@ -10,9 +10,9 @@
   <body>
         <img class="animated rotateInUpLeft" id="streamLose" src="https://i.imgur.com/LdkoL3F.png" alt="stream">
 
-            <h1>Fries make you feel heavy and nauseous. You fall into the stream and are wet and tired before battle</h1>
+            <h1>Fries make you feel heavy and nauseous. You fall into the stream and are wet and tired before battle.</h1>
 
-            <button class="continueButton"><a href="../cave/caveStart.html">Continue</a></button>
+            <button class="continueButton"><a class="buttonLink" href="../cave/caveStart.html">Continue</a></button>
 
 
   </body>
