--- a/views/about.html
+++ b/views/about.html
@@ -21,8 +21,8 @@
       <h1>About Health Quest</h1>
       <div id="aboutPara">
       <p>
-Kids need a way to conceptualize how food effects their body because research shoes that since 1994 the number of kids at risk for Type 2 diabetes has grown from less than 5% to between 30-50% in 2017.  Additionally, since 1970, obesity has tripled amongst children in the United States.
-We believe by creating this game, can create a fun and engaging way to make smart food choices and learn the good and bad effects their choices have on their body and increase their healthy choices throughout life. In this game, you must defeat the evil Fructar, by keeping your energy up and staying strong. As you go on your adventure, make the proper food choices as everything you eat has an effect on your body.</p></div>
+Kids need a way to conceptualize how food effects their body because research shows that since 1994 the number of kids at risk for Type 2 diabetes has grown from less than 5% to between 30-50% in 2017.  Additionally, since 1970, obesity has tripled amongst children in the United States.
+We believe by creating this game, we can create a fun and engaging way for kids to make smart food choices, learn the good and bad effects their choices have on their body and increase their healthy choices throughout their life. In this game, you must defeat the evil sugar monster Fructar, by keeping your energy up and staying strong. As you go on your adventure, make the proper food choices as everything you eat has an effect on your body.</p></div>
     </div>
     <img class="animated jello"id="veggie" src="https://i.imgur.com/Xpy3BKO.jpg" alt="veggie">
   </body>
