--- a/views/levels/cave/caveLose.html
+++ b/views/levels/cave/caveLose.html
@@ -12,8 +12,8 @@
             <img class="animated bounce" id="caveLose" src="https://i.imgur.com/kETfax3.png" alt="cave">
               <h1>Oh no! That soda made you jittery and your sugar spike up and down. Fructar defeats you and infects all of the village kids.<br> Game over</h1>
 
-              <button class="playAgain"><a href="../forest/forestStart.html">Try Again?</a></button>
-              <button class="goHome"><a href="../../../index.html">Go Home</a></button>
+              <button class="playAgain"><a class="buttonLink" href="../forest/forestStart.html">Try Again?</a></button>
+              <button class="goHome"><a class="buttonLink" href="../../../index.html">Go Home</a></button>
 
 
   </body>
