--- a/views/levels/cave/caveStart.html
+++ b/views/levels/cave/caveStart.html
@@ -13,7 +13,7 @@
           <a href="caveLose.html"><img id="coke" src="https://i.imgur.com/Cb40EMX.png" alt="coke"></a>
                 <a href="caveWin.html"><img id="water" src="https://i.imgur.com/GfkpYag.png" alt="water"></a>
                   <h1>Watch out! Fructar is in your sights! Drink up so you stay hydrated!</h1>
-                    <h3>Choose your beverage wisely</h3>
+                    <h3>Choose your beverage wisely.</h3>
 
   </body>
   <script src="../../../main.js"></script>
