--- a/views/levels/mountain/mounGood.html
+++ b/views/levels/mountain/mounGood.html
@@ -10,10 +10,10 @@
   <body>
         <img class="animated rotateIn" id="mounWin" src="https://i.imgur.com/FPREN7s.png" alt="moun">
 
-                  <h1>Turkey sandwich on whole wheat bread! Good job.
-The protein and healthy fats will keep you full, while the complex carbs in the bread will give you energy up for your hike</h1>
+                  <h1>Turkey sandwich on whole wheat bread, good job!
+The protein and healthy fats will keep you full, while the complex carbs in the bread will give you energy up for your hike.</h1>
 
-                 <button class="continueButton"><a href="../stream/streamStart.html">Continue</a></button>
+                 <button class="continueButton"><a class="buttonLink" href="../stream/streamStart.html">Continue</a></button>
 
 
   </body>
