--- a/views/levels/stream/streamStart.html
+++ b/views/levels/stream/streamStart.html
@@ -12,7 +12,7 @@
           <a href="streamBad.html"><img id="fries" src="https://i.imgur.com/9vGHOwH.png" alt="fries"></a>
                 <a href="streamGood.html"><img id="veg" src="https://i.imgur.com/P4igJ6W.png" alt="veg"></a>
                   <h1>Fructar heard you were coming and he hid in that cave across the stream. Looks dangerous.</h1>
-                    <h3> Power up before you make your way over there</h3>
+                    <h3> Power up before you make your way over there.</h3>
 
   </body>
   <script src="../../../main.js"></script>
