--- a/views/levels/cave/caveLose.html
+++ b/views/levels/cave/caveLose.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../../../style.css">
       </head>
       <body>
-            <img class="animated bounce" id="caveLose" src="https://i.imgur.com/kETfax3.png" alt="cave">
+            <img class="animated bounce" id="caveLose" src="https://i.imgur.com/GHg3h8K.png" alt="cave">
               <h1>Oh no! That soda made you jittery and your sugar spike up and down. Fructar defeats you and infects all of the village kids.<br> Game over</h1>
 
               <button class="playAgain"><a class="buttonLink" href="../forest/forestStart.html">Try Again?</a></button>
